--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,9 +18,14 @@ jobs:
       - name: Verify I2C Register Contract
         run: python3 firmware/tests/verify_registers.py
 
-      # Step 2: Physics/DSP Unit Test
+      # Step 2: I2C Test
+      - name: I2C Interface Audit
+        run: |
+          gcc -std=c11 firmware/src/i2c_slave.c firmware/tests/test_i2c_logic.c \
+          -I firmware/include -o firmware/tests/i2c_audit -lm && ./firmware/tests/i2c_audit
+
+      # Step 3: Physics/DSP Unit Test
       - name: Verify DOA Logic (C Compilation)
         run: |
           gcc -std=c11 firmware/src/doa_engine.c firmware/tests/test_doa.c \
-          -I firmware/include -o test_doa -lm
-          ./test_doa
+          -I firmware/include -o firmware/tests/test_doa -lm && ./firmware/tests/test_doa
